# snippets-rs

./: README.md
actix-web/greet/: Cargo.toml
actix-web/greet/src/: main.rs
axum/file/: Cargo.toml
axum/file/src/: main.rs
axum/greet/: Cargo.toml
axum/greet/src/: main.rs
clap/derive/: Cargo.toml
clap/derive/src/: main.rs
clap/subcmd/: Cargo.toml
clap/subcmd/src/: main.rs
diesel/greet/: Cargo.toml  README.md
diesel/greet/migrations/2025-07-06-212833_greetings/: up.sql
diesel/greet/src/: lib.rs  main.rs  models.rs  schema.rs
gtk4-rs/hello/: Cargo.toml
gtk4-rs/hello/src/: main.rs
http/request/: Cargo.toml
http/request/src/: main.rs
hyper/server/: Cargo.toml
hyper/server/src/: main.rs
libp2p/gossip/: Cargo.toml
libp2p/gossip/src/: main.rs
libp2p/kademlia/: Cargo.toml
libp2p/kademlia/src/: main.rs
libp2p/ping/: Cargo.toml
libp2p/ping-mdns-flood/: Cargo.toml
libp2p/ping-mdns-flood/src/: main.rs
libp2p/ping/src/: main.rs
libp2p/protocol/: Cargo.toml
libp2p/protocol/src/: main.rs  protocol.rs
libp2p/request/: Cargo.toml
libp2p/request-mdns/: Cargo.toml
libp2p/request-mdns/src/: main.rs
libp2p/request/src/: main.rs
nats/greet-async/: Cargo.toml
nats/greet-async/src/: main.rs
openssl/client/: Cargo.toml
openssl/client/src/: main.rs
rcgen/simple-cert/: Cargo.toml
rcgen/simple-cert/src/: main.rs
reqwest/client/: Cargo.toml
reqwest/client/src/: main.rs
rocket/greet/: Cargo.toml
rocket/greet/src/: main.rs
rusqlite/greet/: Cargo.toml
rusqlite/greet/src/: main.rs
rustls/client/: Cargo.toml
rustls/client/src/: main.rs
rustls/pemfile/: Cargo.toml
rustls/pemfile/src/: main.rs
serde/json/: Cargo.toml
serde/json/src/: main.rs
socket/tcp-async/: Cargo.toml
socket/tcp-async/src/: main.rs
socket/tcp-smol/: Cargo.toml
socket/tcp-smol/src/: main.rs
socket/tcp-tokio/: Cargo.toml
socket/tcp/src/: main.rs
socket/udp/: Cargo.toml
socket/udp-async/: Cargo.toml
socket/udp-async/src/: main.rs
socket/udp-smol/: Cargo.toml
socket/udp-smol/src/: main.rs
socket/udp-tokio/: Cargo.toml
socket/udp-tokio/src/: main.rs
socket/udp/src/: main.rs
socket/unix/: Cargo.toml
socket/unix-async/: Cargo.toml
socket/unix-async-std/: Cargo.toml
socket/unix-async-std/src/: main.rs
socket/unix-async/src/: main.rs
socket/unix-smol/: Cargo.toml
socket/unix-smol/src/: main.rs
socket/unix-tokio/: Cargo.toml
socket/unix-tokio/src/: main.rs
socket/unix/src/: main.rs
surf/client/: Cargo.toml  README.md
surf/client/src/: main.rs
sync/channel/: Cargo.toml
sync/channel-async/: Cargo.toml
sync/channel-async/src/: main.rs
sync/channel/src/: main.rs
tls-listener/https/: Cargo.toml
tls-listener/https/src/: main.rs
whoami/: Cargo.toml
whoami/src/: main.rs
zbus/hello-client/: Cargo.toml
zbus/hello-client/src/: main.rs
zbus/hello-server/: Cargo.toml
zbus/hello-server/src/: main.rs
zbus/method-ping/: Cargo.toml
zbus/method-ping/src/: main.rs
zbus/signal-ping/: Cargo.toml
zbus/signal-ping/src/: main.rs
