[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.44.2", features = ["fs", "macros", "rt", "rt-multi-thread", "net"] }
tokio-util = "0.7.14"
