[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread", "net"] }
tokio-util = "0.7.18"
