[package]
name = "kademlia"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version for dependency updates, dependabot fixes
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "3f88b309776d772b87d66c389d552db793276717", features = ["tokio", "tcp", "tls", "noise", "yamux", "dns", "kad"] }
futures = "0.3.32"
tokio = "1.51.0"
