[package]
name = "ping-mdns-flood"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version for dependency updates, dependabot fixes
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c505994dfb99bf47f44a415d65d4eefa66ab02", features = ["tokio", "mdns", "tcp", "tls", "noise", "yamux", "dns", "macros", "floodsub", "mdns"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = "1.52.3"
