[package]
name = "ping"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version dated 2026-01-07 to remove lru dependency for dependabot alert
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "5e3519fb66b92c7f7c0dc744ab360fd8b669fe54", features = ["tokio", "tcp", "tls", "dns", "noise", "yamux", "ping"] }
futures = "0.3.31"
tokio = "1.49.0"
