[package]
name = "protocol"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version for dependency updates, dependabot fixes
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "3f88b309776d772b87d66c389d552db793276717", features = ["tokio", "tcp", "tls", "noise", "yamux", "dns"] }
futures = "0.3.32"
void = "1.0.2"
futures-timer = "3.0.3"
log = "0.4.29"
tokio = "1.51.0"
