[package]
name = "protocol"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version for dependency updates, dependabot fixes
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "c4efffcf6733b761eae9a2bb69306b34e37a005f", features = ["tokio", "tcp", "tls", "noise", "yamux", "dns"] }
futures = "0.3.32"
void = "1.0.2"
log = "0.4.29"
tokio = "1.52.3"
