[package]
name = "protocol"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version for dependency updates, dependabot fixes
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c505994dfb99bf47f44a415d65d4eefa66ab02", features = ["tokio", "tcp", "tls", "noise", "yamux", "dns"] }
futures = "0.3.32"
void = "1.0.2"
log = "0.4.33"
tokio = "1.52.3"
