[package]
name = "request-mdns"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version for dependency updates, dependabot fixes
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "3f88b309776d772b87d66c389d552db793276717", features = ["tokio", "tcp", "tls", "noise", "yamux", "dns", "macros", "request-response", "mdns"] }
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = "1.51.0"
