[package]
name = "https"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.11", features = ["full"] }
rcgen = "0.13.2"
tls-listener = { version = "0.11.0", features = ["rustls"] }
tokio = { version = "1.44.2", features = ["fs", "macros", "rt", "rt-multi-thread", "net"] }
tokio-rustls = "0.26.2"
tokio-util = "0.7.14"
