[package]
name = "https"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["full"] }
rcgen = "0.14.7"
tls-listener = { version = "0.11.2", features = ["rustls"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread", "net"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.18"
